Inmob-Salesforce/force-app/main/default/objects/CI_ParametroEtapa__c/CI_ParametroEtapa__c.object-meta.xml
<CustomObject>
    <label>Parámetro por Etapa</label>
    <nameField>
        <displayFormat>PRE# {YYYY}{MM}-{0000000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parametros por Etapas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>