Inmob-Salesforce/force-app/main/default/objects/CI_ParametroEtapa__c/fields/CI_CuotaEntrada__c.field-meta.xml
<CustomField>
    <fullName>CI_CuotaEntrada__c</fullName>
    <defaultValue>0</defaultValue>
    <description>% Cuota Entrada</description>
    <label>% Cuota Entrada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>