Inmob-Salesforce/force-app/main/default/objects/CI_ParametroEtapa__c/fields/CI_Etapa__c.field-meta.xml
<CustomField>
    <fullName>CI_Etapa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Etapa</label>
    <referenceTo>Urbanizacion__c</referenceTo>
    <relationshipLabel>Parámetros por Etapa</relationshipLabel>
    <relationshipName>Parametros_por_Etapas</relationshipName>
    <type>Lookup</type>
</CustomField>