Inmob-Salesforce/force-app/main/default/objects/CI_ParametroEtapa__c/fields/CI_FormaPago__c.field-meta.xml
<CustomField>
    <fullName>CI_FormaPago__c</fullName>
    <label>Forma Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>CREDITO DIRECTO</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>CREDITO HIPOTECARIO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>