Inmob-Salesforce/force-app/main/default/objects/CI_ParametroEtapa__c/fields/CI_PagosSaldo__c.field-meta.xml
<CustomField>
    <fullName>CI_PagosSaldo__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pagos Saldo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>