Inmob-Salesforce/force-app/main/default/objects/CI_ParametroEtapa__c/fields/CI_TasaDescuentoTerreno__c.field-meta.xml
<CustomField>
    <fullName>CI_TasaDescuentoTerreno__c</fullName>
    <defaultValue>0</defaultValue>
    <label>% Tasa Descuento Terreno</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>